# cyberframe-prysm

./: CHANGELOG.md  deps.bzl  go.mod  go.sum
beacon-chain/blockchain/: BUILD.bazel  chain_info_test.go  execution_engine.go  inclusion_list.go  options.go  process_block.go  process_block_helpers.go  process_block_test.go  receive_block.go  service.go  service_test.go  setup_test.go
beacon-chain/cache/: BUILD.bazel
beacon-chain/execution/: BUILD.bazel  engine_client.go  engine_client_focil.go  engine_client_test.go
beacon-chain/node/: BUILD.bazel  node.go
beacon-chain/p2p/: broadcaster.go  broadcaster_test.go  discovery_test.go  gossip_topic_mappings.go  interfaces.go
beacon-chain/rpc/: BUILD.bazel  service.go
beacon-chain/slasher/: BUILD.bazel  chunks.go  detect_attestations.go
beacon-chain/sync/: BUILD.bazel  inclusion_list.go  options.go  pending_attestations_queue.go  rpc.go  rpc_beacon_blocks_by_root.go  rpc_beacon_blocks_by_root_test.go  rpc_blob_sidecars_by_range.go  rpc_chunked_response.go  service.go  subscriber_beacon_attestation.go  subscriber_beacon_blocks.go  subscriber_beacon_blocks_chunks.go  subscriber_light_client.go  validate_aggregate_proof.go  validate_beacon_attestation.go  validate_beacon_attestation_electra.go  validate_beacon_blocks.go  validate_blob.go  validate_bls_to_execution_change_test.go  validate_sync_contribution_proof_test.go
beacon-chain/sync/rlnc/: BUILD.bazel  block_chunk_cache.go  block_chunk_cache_test.go  committer.go  committer_test.go  errors.go  matrix.go  matrix_test.go  message.go  message_test.go  node.go  node_test.go
beacon-chain/verification/: BUILD.bazel  error.go
changelog/: radek_electra-nits.md  tt_update-execution-request.md
config/params/: config.go  (+3 more)
proto/: ssz_proto_library.bzl
(+106 files in other folders)
