load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["committer.go"],
    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/sync/rlnc",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gtank_ristretto255//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["committer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/require:go_default_library",
        "@com_github_gtank_ristretto255//:go_default_library",
    ],
)
