load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "block_chunk_cache.go",
        "committer.go",
        "errors.go",
        "matrix.go",
        "message.go",
        "node.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/sync/rlnc",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "@com_github_gtank_ristretto255//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "committer_test.go",
        "matrix_test.go",
        "message_test.go",
        "node_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//testing/require:go_default_library",
        "@com_github_gtank_ristretto255//:go_default_library",
    ],
)
